Fix spacing on dl dt

--- a/assets/sass/components/_list.scss
+++ b/assets/sass/components/_list.scss
@@ -207,7 +207,7 @@
 		dt {
 			display: block;
 			font-weight: _font(weight-bold);
-			margin: 0 0 (_size(element-margin) * 0.5) 0;
+			margin: 2rem 0 0.65rem 0;
 		}
 
 		dd {
